# renti-agent-pro

./: .env.example  .env.prod.example  .gitignore  Jenkinsfile  MIGRATION-REPORT.md  README.md  Task.md  docker-compose.prod.yml  postgres.dump
.tools/: maven-settings.xml
renti-agent-backend/: .dockerignore  .gitignore  Dockerfile  README.md  pom.xml
renti-agent-backend/agent-service/: Dockerfile  pyproject.toml
renti-agent-backend/agent-service/app/: config.py  llm.py  main.py  tools.py
renti-agent-backend/agent-service/app/graphs/: property_insight.py  rental_search.py
renti-agent-backend/docs/: AGENT-SERVICE-CONTRACT.md  API-CONTRACT.md  CONVENTIONS.md
renti-agent-backend/scripts/: beike_ingest.cjs  douban_ingest.cjs  start-all.ps1  stop-all.ps1  xhs_ingest.py  ziroom_ingest.cjs
renti-agent-backend/scripts/lib/: ziroom_price.cjs
renti-agent-front/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  run-ui-check.cjs  tailwind.config.js  vite.config.js
renti-agent-front/docs/: DESIGN-SPEC.md
renti-agent-front/nginx/: default.conf
renti-agent-front/src/: App.jsx  main.jsx
renti-agent-front/src/components/: ErrorBoundary.jsx
renti-agent-front/src/hooks/: useAmap.js  useReveal.js  useTheme.js  useTypewriter.js
renti-agent-front/src/layouts/: AdminLayout.jsx  SiteLayout.jsx
renti-agent-front/src/pages/: CitySelectPage.jsx  CityWorkspacePage.jsx  HomePage.jsx  LoginPage.jsx  NotFoundPage.jsx  PropertyDetailPage.jsx  RegisterPage.jsx  UserWorkspacePage.jsx
renti-agent-front/src/routes/: guards.jsx
(+258 files in other folders)
