[project]
name = "renti-agent-service"
version = "2.0.0"
description = "Renti Agent AI service - LangGraph orchestration for rental search & property insight"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
